@@ -23,12 +23,10 @@ import org.modelmapper.TypeToken;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
-
 import static greencity.constant.ErrorMessage.CUSTOM_SHOPPING_LIST_ITEM_NOT_FOUND_BY_ID;
 
 /**
@@ -214,7 +212,7 @@ public class CustomShoppingListItemServiceImpl implements CustomShoppingListItem
         List<Long> arrayIds = Arrays
             .stream(ids.split(","))
             .map(Long::valueOf)
-            .collect(Collectors.toList());
+            .toList();
 
         List<Long> deleted = new ArrayList<>();
         for (Long id : arrayIds) {
